1999-03-01  Adam Fedor  <fedor@gnu.org>

	* Update documentation.

1999-02-28  Adam Fedor  <fedor@gnu.org>

	* Source/Makefile.postamble: Don't install services if not
	root. (patches submitted by Christopher Seawood
	<cls@seawood.org>). 

Tue Feb 23  12:03:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSObject.h: Fixed bugin in ASSIGNCOPY() macro and added
	CREATE_AUTORELEASE_POOL() macro for libFoundation compatibility.
	* Source/include/NSRunLoop.h: Added GCFinalization protocol.
	* Source/NSRunLoop.m: Tidied a little, added GC macro use, fixed minor
	bug, and added slight performance improvement.

1999-02-22  Adam Fedor  <fedor@gnu.org>

	* Version: update version.
	* Source/NSProcessInfo.m: Change missing main message.

Mon Feb 22   5:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Merged in alterations from main cvs branch made to wrong place 'cos
	dawn branch was already created :-(
	* Source/NSData.m: preserve file attributes when writing atomically
	* Source/NSUser.m: Bugfixes for consistent naming of current user.
	* Source/NSUserDefaults.m: Bugfixes so that running apps as root
	doesn't mess up defaults database.
	* Source/NSFileManager.m: Create files with correct ownership when
	process is setuid to root - and provide facility for NSData to do same.
	* Source/NSArray.m: Merged enumerator bugfix - missing @end

1999-02-19  Adam Fedor  <fedor@gnu.org>

	* Source/NSHost.m ([NSHost +currentHost]): Check for host not found.
	([NSHost +hostWithName:]): Check for nil arg.
	([NSHost +hostWithAddress:]): Likewise.

	* Testing/release.m: Make array mutable.
	* Testing/fref.m: Switch to NSArchiver/NSUnarchiver

Wed Feb 17   8:52:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSProcessInfo.m: Include process name in arguments list as
	in the OPENSTEP implementation - suggested by dirk@object-factory.com
	* Source/NSUserDefaults.m: Adjust for change to NSProcessInfo